# dragonfly-scripts

./: .gitignore
fmcmc/: Makefile  fmcmc.cpp  fmcmc.h  main.cpp  test.ipynb  utils.cpp  utils.h
others/: anneal.cpp  cpsat.py  mcts.cpp
reinforce/: design.py  main.py  sendJob  utils.py
simulate_dfly_queue_sizes/: Makefile  balls_bins.cpp  balls_bins.h  sim1.cpp  traffic_patterns.cpp  traffic_patterns.h  utils.cpp  utils.h
simulate_dfly_queue_sizes/configs/k_12/: config_1_score_-1080.txt  config_2_score_-1080.txt  config_3_score_-1080.txt  config_4_score_-1080.txt  config_5_score_-1080.txt
simulate_dfly_queue_sizes/configs/k_16/: config_1_score_-4082.txt  config_2_score_-4082.txt  config_3_score_-4082.txt  config_4_score_-4082.txt  config_5_score_-4082.txt
simulate_dfly_queue_sizes/configs/k_20/: config_1_score_-11282.txt  config_2_score_-11282.txt  config_3_score_-11282.txt  config_4_score_-11282.txt  config_5_score_-11282.txt
simulate_dfly_queue_sizes/configs/k_4/: config_10_score_-4.txt  config_1_score_-10.txt  config_1_score_-4.txt  config_1_score_-6.txt  config_1_score_-8.txt  config_1_score_0.txt  config_2_score_-10.txt  config_2_score_-4.txt  config_2_score_-6.txt  config_2_score_-8.txt  config_2_score_0.txt  config_3_score_-10.txt  config_3_score_-4.txt  config_3_score_-6.txt  config_3_score_-8.txt  config_3_score_0.txt  config_4_score_-10.txt  config_4_score_-4.txt  config_4_score_-6.txt  config_4_score_-8.txt  config_4_score_0.txt  config_5_score_-10.txt  config_5_score_-4.txt  config_5_score_-6.txt  config_5_score_-8.txt  config_5_score_0.txt  config_6_score_-10.txt  config_6_score_-4.txt  config_6_score_-6.txt  config_6_score_-8.txt  (+9 more)
simulate_dfly_queue_sizes/tests/: check_dp_1.ipynb  test.ipynb
uet-htsim/: .gitignore  LICENSE-Transport-WG.txt  README.md  requirements.txt  security.md
uet-htsim/htsim/: README.md
uet-htsim/htsim/sim/: .clang-format  CMakeLists.txt  aeolusqueue.cpp  aeolusqueue.h  buffer_reps.cpp  buffer_reps.h  cbrpacket.h  circular_buffer.h  clock.h  cnppacket.cpp  cnppacket.h  compositeprioqueue.cpp  compositeprioqueue.h  compositequeue.cpp  compositequeue.h  config.cpp  config.h  cpqueue.cpp  dcqcn.cpp  dcqcn.h  dcqcn_logger.cpp  dcqcn_logger.h  eqds.cpp  eqds.h  eqdspacket.h  eth_pause_packet.h  eventlist.cpp  eventlist.h  faircompositequeue.cpp  faircompositequeue.h  fairpullqueue.cpp  fairpullqueue.h  logfile.cpp  loggers.cpp  loggers.h  loggertypes.h  modular_vector.h  ndp.cpp  ndp.h  ndppacket.h  (+38 more)
uet-htsim/htsim/sim/datacenter/: CMakeLists.txt  bcube_topology.cpp  camcubetopology.cpp  check_regressions.py  commit_check.sh  connection_matrix.cpp  connection_matrix.h  dragon_fly_plus_switch.cpp  dragon_fly_plus_switch.h  dragon_fly_plus_topology.cpp  dragon_fly_plus_topology.h  dragon_fly_topology.cpp  experiment2_all.txt  experiment2_nscc_sleek.txt  fat_tree_switch.cpp  fat_tree_switch.h  fat_tree_topology.cpp  fat_tree_topology.h  generate_permutation_experiments.py  generic_topology.cpp  main_eqds.cpp  main_hpcc.cpp  main_ndp.cpp  main_roce.cpp  main_swift.cpp  main_tcp.cpp  main_uec.cpp  multihomed_fat_tree_topology.cpp  oversubscribed_fat_tree_topology.cpp  shortflows.cpp  star_topology.cpp  topology.cpp  topology.h  validate.py  validate.txt  validate_dctcp.txt  validate_eqds+dctcp.txt  validate_eqds+rcv.txt  validate_eqds+smart.txt  validate_eqds.txt  (+15 more)
uet-htsim/htsim/sim/datacenter/dragonfly_plus_connection_matrices/: gen_group_rings.py  gen_groups_to_group_traffic.py  gen_permutation_dragonfly_plus.py  gen_ring.py  perm_4352n_4352c_2MB_v1.cm  perm_4352n_4352c_2MB_v2.cm  perm_4352n_4352c_2MB_v3.cm  perm_4352n_4352c_2MB_v4.cm  perm_4352n_4352c_2MB_v5.cm  ring_2_20n_2MB.cm
uet-htsim/htsim/sim/datacenter/dragonfly_plus_connection_matrices/DENSE/: 16_1_4352n_2MB.cm  1_1_4352n_128c_2MB.cm  1_1_4352n_16c_2MB.cm  1_1_4352n_2MB.cm  1_1_4352n_32c_2MB.cm  1_1_4352n_64c_2MB.cm  2_1_4352n_2MB.cm  4_1_4352n_2MB.cm  8_1_4352n_2MB.cm  bidir_4352n_2MB.cm  incast_4352n_256c_2MB.cm  one_4352n_1h_2MB.cm  one_4352n_2MB.cm  one_4352n_2h_2MB.cm  perm_4352n_4352c_2MB.cm  ring_128_4352n_2MB.cm  ring_16_4352n_2MB.cm  ring_256_4352n_2MB.cm  ring_32_4352n_2MB.cm  ring_4352n_2MB.cm  ring_64_4352n_2MB.cm  ring_8_4352n_2MB.cm
uet-htsim/htsim/sim/datacenter/dragonfly_plus_connection_matrices/SPARSE/: full_incast_k_10_2MB.cm  full_incast_k_4_2MB.cm  full_incast_k_6_2MB.cm  full_incast_k_8_2MB.cm  gen_full_incast.py  ring_16_4160n_2MB.cm  ring_1_4160n_2MB.cm  ring_2_4160n_2MB.cm  ring_32_4160n_2MB.cm  ring_4_4160n_2MB.cm  ring_64_4160n_2MB.cm  ring_8_4160n_2MB.cm
uet-htsim/htsim/sim/datacenter/dragonfly_plus_experiments/: adversarial_all_to_all.py  dfp_exp_utils.py  full_all_to_all.py  full_all_to_all_worsen_early_completions.py  full_all_to_who_worsen_early_completions.py  full_incast.py  full_permutation.py  partial_all_to_all.py  run_experiments.py  subclique_samez_all_to_all.py  z_vs_y_symmetry.py
uet-htsim/htsim/sim/datacenter/results/: 200g_nscc.txt  200g_nscc_2.txt  200g_nscc_4_to_1.txt  200g_nscc_4_to_1_2.txt  200g_nscc_8_to_1.txt  200g_nscc_8_to_1_2.txt  200g_rccc.txt  200g_rccc_4_to_1.txt  200g_rccc_8_to_1.txt  400g_nscc.txt  400g_nscc_2.txt  400g_nscc_4_to_1.txt  400g_nscc_4_to_1_2.txt  400g_nscc_4_to_1_fail1.txt  400g_nscc_4_to_1_fail1_2.txt  400g_nscc_8_to_1.txt  400g_nscc_8_to_1_2.txt  400g_nscc_8_to_1_fail1.txt  400g_nscc_8_to_1_fail1_2.txt  400g_nscc_fail1.txt  400g_nscc_fail1_2.txt  400g_rccc.txt  400g_rccc_4_to_1.txt  400g_rccc_4_to_1_fail1.txt  400g_rccc_8_to_1.txt  400g_rccc_8_to_1_fail1.txt  400g_rccc_fail1.txt  800g_nscc.txt  800g_nscc_2.txt  800g_nscc_4_to_1.txt  800g_nscc_4_to_1_2.txt  800g_nscc_8_to_1.txt  800g_nscc_8_to_1_2.txt  800g_rccc.txt  800g_rccc_4_to_1.txt  800g_rccc_8_to_1.txt  experiment1_400g_nscc_4_to_1_fail1.txt  experiment1_400g_nscc_8_to_1_fail1.txt  experiment1_400g_nscc_fail1.txt  experiment1_400g_rccc_4_to_1_fail1.txt  (+9 more)
uet-htsim/htsim/sim/datacenter/validation/: LICENSE  analysis_and_plotting.py  contributors  example_validate.json  extract_max_qs.awk  extract_max_qs.sh  validate_all.py
(+1655 files in other folders)
